<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  >
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    >
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginRight="4dp"
      >
      
      <ImageView 
          android:id="@+id/pedido_ImageView"
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:scaleType="center"
          android:background="@android:color/darker_gray"
          android:cropToPadding="true"/>
      <ImageButton android:id="@+id/pedido_imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_camera"
        />     
    </LinearLayout>
    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_weight="1"
      >
      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_title_label"
        style="?android:listSeparatorTextViewStyle"
        />
      <EditText android:id="@+id/pedido_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:hint="@string/pedido_title_hint"
        />
    </LinearLayout>
  </LinearLayout>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/pedido_details_label"
    style="?android:listSeparatorTextViewStyle"
    />
  
  <LinearLayout  
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal" >
   <Button  android:id="@+id/pedido_date"
        	  android:layout_width="0px"
              android:layout_height="wrap_content"
              android:layout_weight="1"
        	  android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"/>
       
    <Button  android:id="@+id/pedido_time"
        	  android:layout_width="0px"
              android:layout_height="wrap_content"
              android:layout_weight="1"
        	  android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"/>
    </LinearLayout>
    
 
</LinearLayout>






